# av_detect

./: .gitignore  CMakeLists.txt  README.md  av_detect.manifest  main.cpp  processes.csv  version.rc
.github/workflows/: build.yml
